--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "dotenv-cli": "^4.0.0",
+    "nodemon": "^2.0.7"
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
@@ -22,17 +26,14 @@
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "express-validator": "^6.10.0",
-    "faker": "^5.4.0",
+    "faker": "^5.5.1",
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "per-env": "^1.0.2",
     "pg": "^8.5.1",
+    "psql": "0.0.1",
     "sequelize": "^5.22.4",
     "sequelize-cli": "^5.5.1"
-  },
-  "devDependencies": {
-    "dotenv-cli": "^4.0.0",
-    "nodemon": "^2.0.7"
   }
 }
