--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.5",
+    "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "cookie-parser": "^1.4.5",
     "js-cookie": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -15,6 +16,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
+  "proxy": "http://localhost:5000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -38,6 +40,5 @@
   },
   "devDependencies": {
     "redux-logger": "^3.0.6"
-  },
-  "proxy": "http://localhost:5000"
+  }
 }
