--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,14 @@
     "cookie-parser": "^1.4.5",
     "js-cookie": "^2.2.1",
     "react": "^17.0.2",
+    "react-datepicker": "^3.7.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.2.3"
   },
   "proxy": "http://localhost:5000",
   "scripts": {
